--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ cmake_minimum_required (VERSION 3.8)
 project ("arkanoid")
 
 # Include sub-projects.
-add_subdirectory ("arkanoid")
+add_subdirectory ("src")
